Bug 1065606 - Use unclipped primitive subregion to calculate image transform in SVGFEImageElement::GetPrimitiveDescription. r=mstange